# agentic_search

./: .env.example  .gitignore  AGENTS.md  DEEPAGENTS_CLI_CHEATSHEET.md  DEEP_AGENT_SEARCH_CHEATSHEET.md  README.md  TANTIVY_CHEATSHEET.md  TANTIVY_LG_CHEATSHEET.md  pyproject.toml
.deepagents/: AGENTS.md
augmented_jsonl_index/: deepagents_index.json
data/deepagents_raw_md/: deepagents-cli.md  deepagents-middleware.md  deepagents-products.md  deepagents-subagents.md
data/langgraph_raw_md/: langgraph-add-memory.md  langgraph-agentic-rag.md  langgraph-application-structure.md  langgraph-case-studies.md  langgraph-choosing-apis.md  langgraph-deploy.md  langgraph-functional-api.md  langgraph-graph-api.md  langgraph-install.md  langgraph-local-server.md  langgraph-observability.md  langgraph-overview.md  langgraph-persistence.md  langgraph-pregel.md  langgraph-quickstart.md  langgraph-sql-agent.md  langgraph-streaming.md  langgraph-studio.md  langgraph-test.md  langgraph-ui.md  langgraph-use-functional-api.md  langgraph-use-graph-api.md  langgraph-use-time-travel.md  (+1 more)
design/: deep_agent_search_plan.md
evaluation/: EVALUATION_SUMMARY.md  EVALUATION_SUMMARY_2.md  results_20260222_214009.json  results_20260222_214309.json  results_approach3_subagent_final.json  run_evaluation.py  test_set.json
prepare/: deepagents_cli_plan.md  research.md  tantivy_agent_search_plan.md
scripts/: deep_agent_search.py  helper.py  tantivy_agent_search.py  tantivy_index_manager.py  tantivy_lg_agent_search.py  tantivy_search.py  trace_viewer.py
tests/: __init__.py
(+6 files in other folders)
