[project]
name = "agentic-search"
version = "0.1.0"
description = "Agentic search over Markdown documentation using DeepAgents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.3.8",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "tantivy>=0.22.0",
    "langchain-openai>=1.1.10",
    "msgpack>=1.1.2",
    "watchdog>=6.0.0",
    "langchain-anthropic>=1.3.1",
    "rich>=14.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
